--- a/Setup/Setup.csproj
+++ b/Setup/Setup.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\Database\Schema.sql" />
     <None Remove="Data\Query\Distributor.Add.sql" />
     <None Remove="Data\Query\Distributor.AddDb.sql" />
     <None Remove="Data\Query\Distributor.AddPublisher.sql" />
@@ -19,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\Database\Schema.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
     <EmbeddedResource Include="Data\Query\Distributor.Add.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
