--- a/Repos.Web.Admin/Repos.Web.Admin.csproj
+++ b/Repos.Web.Admin/Repos.Web.Admin.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="2.2.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="mssql.dbman" Version="2.0.10" />
+    <PackageReference Include="SimpleAES" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
