--- a/Repos.Web.Admin/appsettings.json
+++ b/Repos.Web.Admin/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Configuration": {
+    "Database": {
+      "Server": "localhost",
+      "Database": "REPOS",
+      "User": "sa",
+      "Password": "123456789",
+      "EncryptionKey": "adm1n0"
+    }
+  }
 }
